--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "gl-wiretap",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "listen and replay gl WebGL gpu commands ",
   "main": "index.js",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
