--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gl-wiretap",
-  "version": "0.0.3",
-  "description": "listen and replay gl WebGL gpu commands ",
+  "version": "0.1.0",
+  "description": "A gl debugger that listens and replays gl (WebGL, WebGL2, and HeadlessGL) gpu commands",
   "main": "index.js",
   "files": [
     "index.js",
@@ -19,6 +19,7 @@
     "webgl",
     "webgl2",
     "headless-gl",
+    "gl",
     "listen",
     "listener",
     "proxy",
